Fixed broken style section

--- a/style.css
+++ b/style.css
@@ -587,7 +587,7 @@ nav a:hover {
 	color: var(--color-secondary);
 	border-color: var(--color-primary);
 }
-#styles > .container,
+#writing > .container,
 #main,
 .profile {
 	width: 95%;
@@ -595,7 +595,7 @@ nav a:hover {
 	margin-right: auto;
 	max-width: 800px;
 }
-#styles > .container,
+#writing > .container,
 article {
 	border: 4px solid var(--color-primary);
 	-webkit-box-shadow: 12px 12px 0 0 var(--color-primary);
